# pdfTranslator

./: .gitignore  Dockerfile  pyproject.toml  render.yaml
.github/workflows/: build-desktop.yml
docs/: DOWNLOAD.md  HOSTING.md
docs/design/: redesign-handoff.md  redesign-prototype.dc.html
docs/superpowers/plans/: 2026-06-25-phase1-core-engine-cli.md  2026-06-26-phase2a-web-ui.md  2026-06-26-ui-redesign-and-engines.md
docs/superpowers/specs/: 2026-06-25-pdf-translator-design.md  2026-06-26-ui-redesign-and-engines-design.md  2026-06-26-web-ui-design.md
packaging/: desktop_entry.py  pdftranslator.spec
src/pdftranslator/: cli.py
src/pdftranslator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdftranslator/core/: engine.py  fonts.py  lang.py  layout.py  models.py  ocr.py  providers.py  terminology.py
src/pdftranslator/web/: __main__.py  app.py  jobs.py  settings.py
src/pdftranslator/web/static/: app.js  index.html  styles.css
tests/: test_cli.py  test_engine.py  test_fonts.py  test_lang.py  test_layout_extract.py  test_layout_rewrite.py  test_ocr.py  test_packaging.py  test_providers.py  test_smoke.py  test_terminology.py  test_web_app.py  test_web_jobs.py  test_web_main.py  test_web_settings.py
