[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftranslator"
version = "0.1.0"
description = "Format-preserving PDF translator (zh/pt/en)"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "requests>=2.31",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pdftranslate = "pdftranslator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Put the package on sys.path directly so the suite does not depend on the
# editable install's .pth, which is flaky when the venv lives in iCloud Drive.
pythonpath = ["src"]
testpaths = ["tests"]
