[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftranslator"
version = "0.1.0"
description = "Format-preserving PDF translator (zh/pt/en)"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "requests>=2.31",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
pdftranslate = "pdftranslator.cli:main"
pdftranslate-web = "pdftranslator.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the web UI assets inside the installed package — without this the wheel
# omits them and the server crashes at startup (StaticFiles: directory missing).
"pdftranslator.web" = ["static/*"]
# Bundle the embeddable Noto fonts (real fonts, embedded + subset into output).
"pdftranslator" = ["assets/fonts/*.ttf"]

[tool.pytest.ini_options]
# Put the package on sys.path directly so the suite does not depend on the
# editable install's .pth, which is flaky when the venv lives in iCloud Drive.
pythonpath = ["src"]
testpaths = ["tests"]
